Fix history page layout on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,10 @@ h2.page-heading {
   margin-bottom: 10px;
 }
 
+.history-img {
+  width: 100%;
+}
+
 
 /* PALMEIRA STYLES */
 
